prompt input jump fix

--- a/thing-editor/src/editor/style.css
+++ b/thing-editor/src/editor/style.css
@@ -451,6 +451,7 @@ input {
 }
 
 .modal-reject-text {
+	height: 33px;
 	color: #ff0000;
 }
 
